--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -177,7 +177,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Controllers\DevelopmentToolController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="DbInitializer.cs" />
@@ -186,9 +186,8 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\ComputersModel.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
-    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\DevelopmentTool.cs" />
     <Compile Include="Models\Context.cs" />
     <Compile Include="Models\StatisticsModel.cs" />
     <Compile Include="Models\Company.cs" />
@@ -247,11 +246,11 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Item\Create.cshtml" />
-    <Content Include="Views\Item\Delete.cshtml" />
-    <Content Include="Views\Item\Details.cshtml" />
-    <Content Include="Views\Item\Edit.cshtml" />
-    <Content Include="Views\Item\Index.cshtml" />
+    <Content Include="Views\DevelopmentTool\Create.cshtml" />
+    <Content Include="Views\DevelopmentTool\Delete.cshtml" />
+    <Content Include="Views\DevelopmentTool\Details.cshtml" />
+    <Content Include="Views\DevelopmentTool\Edit.cshtml" />
+    <Content Include="Views\DevelopmentTool\Index.cshtml" />
     <Content Include="Views\Company\Create.cshtml" />
     <Content Include="Views\Company\Delete.cshtml" />
     <Content Include="Views\Company\Details.cshtml" />
