--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Buy.cs" />
     <Compile Include="Models\DevelopmentTool.cs" />
     <Compile Include="Models\Context.cs" />
     <Compile Include="Models\StatisticsModel.cs" />
