--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -269,6 +269,7 @@
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Views\Buy\Index.cshtml" />
     <Content Include="Views\DevelopmentTool\AddComment.cshtml" />
+    <Content Include="Views\DevelopmentTool\GroupByCompany.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
